Suppression du code mort et amélioration de la lisibilité